k8s/applications/web/headlessx/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: headlessx
  labels:
    name: headlessx
