k8s/applications/web/headlessx/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlessx
  namespace: headlessx
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - "headlessx.peekoff.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: headlessx
          port: 3000
